# r2pa

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: 01_quickstart.ipynb
scripts/: quickstart.sh
src/: config.py
src/cli/: data.py  rl.py  student.py  teacher.py
src/data/: download.py  make_dataset.py
src/env/: portfolio_env.py
src/eval/: backtest.py  benchmarks.py  diagnostics.py
src/llm/: build_regime_features.py  build_regime_features_local.py  build_regime_features_openai.py  oracle_heuristic.py  oracle_local.py  oracle_local_vllm.py  oracle_openai.py  regime.py  store.py
src/portfolio_rl_agent_lab/: config.py
src/portfolio_rl_agent_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/portfolio_rl_agent_lab/cli/: __main__.py  data.py  infer.py  main.py  pipeline.py  rl.py  student.py  teacher.py
src/portfolio_rl_agent_lab/core/: io.py  market.py
src/portfolio_rl_agent_lab/data/: download.py  make_dataset.py
src/portfolio_rl_agent_lab/env/: portfolio_env.py
src/portfolio_rl_agent_lab/eval/: backtest.py  benchmarks.py  diagnostics.py
src/portfolio_rl_agent_lab/infer/: run_policy.py
src/portfolio_rl_agent_lab/llm/: build_regime_features.py  build_regime_features_local.py  json_utils.py  oracle_heuristic.py  oracle_local.py  regime.py  schema.py  store.py
src/student/: build_regime_features_student.py  build_student_dataset.py  train_student_regime.py
src/text/: build_news_daily_alpaca.py  build_text_features.py  encoder.py  news_loader.py
src/train/: train_ppo.py
(+15 files in other folders)
