[project]
name = "portfolio-rl-agent-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, < 3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openai>=2.16.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "yfinance>=1.1.0",
]
